--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="/images/logo.png" class="img-fluid w-100" alt="">
+                        <img src="images/logo.png" class="img-fluid w-100" alt="">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -70,7 +70,7 @@
           <div class="row g-5">
               <div class="col-md-4">
                   <div class="work-icon">
-                      <img src="/images/icon1.png" alt="">
+                      <img src="images/icon1.png" alt="">
                   </div>
                   <div class="work-con">
                     <h5>Easily Customised</h5>
@@ -80,7 +80,7 @@
 
               <div class="col-md-4">
                 <div class="work-icon">
-                    <img src="/images/icon2.png" alt="">
+                    <img src="images/icon2.png" alt="">
                 </div>
                 <div class="work-con">
                   <h5>Easily Customised</h5>
@@ -90,7 +90,7 @@
 
             <div class="col-md-4">
                 <div class="work-icon">
-                    <img src="/images/icon3.png" alt="">
+                    <img src="images/icon3.png" alt="">
                 </div>
                 <div class="work-con">
                   <h5>Easily Customised</h5>
@@ -100,7 +100,7 @@
 
             <div class="col-md-4 mt-5">
                 <div class="work-icon">
-                    <img src="/images/icon4.png" alt="">
+                    <img src="images/icon4.png" alt="">
                 </div>
                 <div class="work-con">
                   <h5>Easily Customised</h5>
@@ -110,7 +110,7 @@
 
             <div class="col-md-4 mt-5">
                 <div class="work-icon">
-                    <img src="/images/icon5.png" alt="">
+                    <img src="images/icon5.png" alt="">
                 </div>
                 <div class="work-con">
                   <h5>Easily Customised</h5>
@@ -120,7 +120,7 @@
 
             <div class="col-md-4 mt-5">
                 <div class="work-icon">
-                    <img src="/images/icon6.png" alt="">
+                    <img src="images/icon6.png" alt="">
                 </div>
                 <div class="work-con">
                   <h5>Easily Customised</h5>
@@ -139,7 +139,7 @@
                 <div class="row g-0">
                     <div class="col-md-3">
                         <div class="prot-img">
-                            <img src="/images/protfolio/prot1.jpg" class="img-fluid w-100" alt="">
+                            <img src="images/protfolio/prot1.jpg" class="img-fluid w-100" alt="">
                             <div class="prot-img-overlay">
                                 <h6>Project Name</h6>
                                 <p>User Interface Design</p>
@@ -149,7 +149,7 @@
 
                     <div class="col-md-3">
                         <div class="prot-img">
-                            <img src="/images/protfolio/prot2.png" class="img-fluid w-100" alt="">
+                            <img src="images/protfolio/prot2.png" class="img-fluid w-100" alt="">
                             <div class="prot-img-overlay">
                                 <h6>Project Name</h6>
                                 <p>User Interface Design</p>
@@ -159,7 +159,7 @@
 
                     <div class="col-md-3">
                         <div class="prot-img">
-                            <img src="/images/protfolio/prot3.jpg" class="img-fluid w-100" alt="">
+                            <img src="images/protfolio/prot3.jpg" class="img-fluid w-100" alt="">
                             <div class="prot-img-overlay">
                                 <h6>Project Name</h6>
                                 <p>User Interface Design</p>
@@ -169,7 +169,7 @@
 
                     <div class="col-md-3">
                         <div class="prot-img">
-                            <img src="/images/protfolio/prot4.jpg" class="img-fluid w-100" alt="">
+                            <img src="images/protfolio/prot4.jpg" class="img-fluid w-100" alt="">
                             <div class="prot-img-overlay">
                                 <h6>Project Name</h6>
                                 <p>User Interface Design</p>
@@ -179,7 +179,7 @@
 
                     <div class="col-md-3">
                         <div class="prot-img">
-                            <img src="/images/protfolio/prot5.jpg" class="img-fluid w-100" alt="">
+                            <img src="images/protfolio/prot5.jpg" class="img-fluid w-100" alt="">
                             <div class="prot-img-overlay">
                                 <h6>Project Name</h6>
                                 <p>User Interface Design</p>
@@ -189,7 +189,7 @@
 
                     <div class="col-md-3">
                         <div class="prot-img">
-                            <img src="/images/protfolio/prot6.jpg" class="img-fluid w-100" alt="">
+                            <img src="images/protfolio/prot6.jpg" class="img-fluid w-100" alt="">
                             <div class="prot-img-overlay">
                                 <h6>Project Name</h6>
                                 <p>User Interface Design</p>
@@ -199,7 +199,7 @@
 
                     <div class="col-md-3">
                         <div class="prot-img">
-                            <img src="/images/protfolio/prot7.jpg" class="img-fluid w-100" alt="">
+                            <img src="images/protfolio/prot7.jpg" class="img-fluid w-100" alt="">
                             <div class="prot-img-overlay">
                                 <h6>Project Name</h6>
                                 <p>User Interface Design</p>
@@ -209,7 +209,7 @@
 
                     <div class="col-md-3">
                         <div class="prot-img">
-                            <img src="/images/protfolio/prot8.jpg" class="img-fluid w-100" alt="">
+                            <img src="images/protfolio/prot8.jpg" class="img-fluid w-100" alt="">
                             <div class="prot-img-overlay">
                                 <h6>Project Name</h6>
                                 <p>User Interface Design</p>
@@ -229,7 +229,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="team-img">
-                        <img src="/images/team1.jpg" class="img-fluid w-100" alt="">
+                        <img src="images/team1.jpg" class="img-fluid w-100" alt="">
                     </div>
                     <div class="team-con">
                         <h5>Ruth Woods</h5>
@@ -245,7 +245,7 @@
 
                 <div class="col-md-3">
                     <div class="team-img">
-                        <img src="/images/team2.jpg" class="img-fluid w-100" alt="">
+                        <img src="images/team2.jpg" class="img-fluid w-100" alt="">
                     </div>
                     <div class="team-con">
                         <h5>Timothy Reed</h5>
@@ -261,7 +261,7 @@
 
                 <div class="col-md-3">
                     <div class="team-img">
-                        <img src="/images/team3.jpg" class="img-fluid w-100" alt="">
+                        <img src="images/team3.jpg" class="img-fluid w-100" alt="">
                     </div>
                     <div class="team-con">
                         <h5>Victoria Valdez</h5>
@@ -277,7 +277,7 @@
 
                 <div class="col-md-3">
                     <div class="team-img">
-                        <img src="/images/team4.jpg" class="img-fluid w-100" alt="">
+                        <img src="images/team4.jpg" class="img-fluid w-100" alt="">
                     </div>
                     <div class="team-con">
                         <h5>Beverly Little</h5>
@@ -301,7 +301,7 @@
         <div class="container-fluid">
             <div class="row g-0">
                 <div class="col-md-6">
-                    <img src="/images/sidebar.jpg" class="img-fluid w-100" alt="">
+                    <img src="images/sidebar.jpg" class="img-fluid w-100" alt="">
                 </div>
                 <div class="col-md-6 colour">
                     <div class="row">
