--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="row g-5">
               <div class="col-md-4">
                   <div class="work-icon">
-                      <img src="images/icon1.png" alt="">
+                      <img src="../psd-to-html-activebox/images/icon1.png" alt="">
                   </div>
                   <div class="work-con">
                     <h5>Easily Customised</h5>
